--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,8 +19,23 @@
   url: "/Validated/"
   side: left
   dropdown:
+  - title: "Test Run 3"
+    url: "/Validated/R03/"
   - title: "Test Run 4"
     url: "/Validated/R04/"
+  - title: "Test Run 5"
+    url: "/Validated/R05/"
+  - title: "Test Run 6"
+    url: "/Validated/R06/"
+  - title: "Test Run 7"
+    url: "/Validated/R07/"
+  - title: "Test Run 8"
+    url: "/Validated/R08/"
+  - title: "Test Run 9"
+    url: "/Validated/R09/"
+  - title: "Test Run 10"
+    url: "/Validated/R10/"
+                
 
 - title: Videos
   url: "/Videos/"
